change tmux config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -60,8 +60,8 @@ setw -g pane-base-index 1
 bind -r g display-popup -d '#{pane_current_path}' -w90% -h90% -E lazygit
 
 # term colors, these are the correct ones according to neovim checkhealth
-set -g default-terminal "tmux-256color"
 set-option -sa terminal-features ',xterm-256color:RGB'
+set-option -g default-terminal "screen-256color"
 
 # reload configuration
 bind-key r source-file ~/.config/tmux/tmux.conf \; display "config reloaded !"
