add starship and btop

--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -4,6 +4,7 @@ neovim = "latest"
 tmux = "latest"
 ripgrep = "latest"
 bat = "latest"
+btop = "latest"
 fzf = "latest"
 fd = "latest"
 lazygit = "latest"
