--- a/dot_config/starship/starship.toml
+++ b/dot_config/starship/starship.toml
@@ -11,7 +11,7 @@
 add_newline = false
 
 [character]
-success_symbol = "[](white)"
+success_symbol = "[❯'(white)"
 error_symbol = "[](red)"
 
 [directory]
