remove second status bar

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -30,8 +30,8 @@ set-option -g allow-rename on
 setw -g automatic-rename on
 
 # second status bar
-set -g 'status-format[1]' ''
-set -g status 2
+#set -g 'status-format[1]' ''
+#set -g status 2
 
 # session select bar
 set -wg mode-style bg=color240,fg=color248
