change tmux config

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -1,58 +1,30 @@
-set-option -g history-limit 25000
+# Options
+set -sg terminal-overrides ",*:RGB"  # true color support
+set -g default-terminal "${TERM}" # terminal default based on env
+set -g escape-time 0  # disable delays on escape sequences
 set -g mouse on
+set -g renumber-windows on  # keep numbering sequential
+set -g repeat-time 1000  # increase "prefix-free" window
+set-option -g history-limit 10000
 
-# for neovim
-set -sg escape-time 10
-set-option -g focus-events on
+# Options: start indexes from 1
+set -g base-index 1
+set -g pane-base-index 1
 
-# vi for copy mode
-setw -g mode-keys vi
+# Theme: borders
+set -g pane-border-lines simple
+set -g pane-border-style fg=black,bright
+set -g pane-active-border-style fg=white
 
-# status bar
-set -g status-style "fg=#665c54"
-set -g status-left-style "fg=#928374"
-set -g status-bg default
+# Theme: status
+set -g status-style bg=default,fg=black,bright
+set -g status-left ""
+set -g status-right "#[fg=black,bright]#H #I"
 set -g status-position top
 
-set -g status-interval 1
-set -g base-index 1
-set -g pane-base-index 1 
-set-window-option -g pane-base-index 1
-set-option -g renumber-windows on
-set -g status-left ""
-set-option -g status-left "#[fg=colour241]  #[fg=colour248, nobold, noitalics, nounderscore]"
-set -g status-right "#{host}"
-set-window-option -g window-status-format "#[fg=colour241]#I#[fg=colour241]:#W#[fg=colour241, noitalics] "
-set-window-option -g window-status-current-format "#[fg=colour247]#I#[fg=colour248]:#W#[fg=colour248, noitalics]#{?window_zoomed_flag,#[fg=colour248],}#F "
+# Theme: command line
+set-option -g message-command-style bg=default,fg=black,bright
+set-option -g message-style bg=default,fg=black,bright
 
-set -g status-right '#{pane_title}'
-set-option -g allow-rename on
-setw -g automatic-rename on
-
-# second status bar
-#set -g 'status-format[1]' ''
-#set -g status 2
-
-# session select bar
-set -wg mode-style bg=color240,fg=color248
-
-# message infos
-set-option -g message-style bg=color240,fg=color248
-
-# writing commands inactive
-set-option -g message-command-style bg=color111,fg=color237
-
-# count the panes from 1
-set -g base-index 1
-setw -g pane-base-index 1
-
-# call lazygit
-bind -r g display-popup -d '#{pane_current_path}' -w90% -h90% -E lazygit
-
-# term colors, these are the correct ones according to neovim checkhealth
-set-option -sa terminal-features ',xterm-256color:RGB'
-set-option -g default-terminal "screen-256color"
-
-# reload configuration
-bind-key r source-file ~/.config/tmux/tmux.conf \; display "config reloaded !"
-
+# Theme: session select
+set -wg mode-style bg=default,fg=black,bright
