--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -19,7 +19,7 @@ set -g pane-active-border-style fg=white
 # Theme: status
 set -g status-style bg=default,fg=black,bright
 set -g status-left ""
-set -g status-right "#[fg=black,bright]#H #I"
+set -g status-right "#[fg=black,bright]#H//#I"
 set -g status-position top
 
 # Theme: command line
