--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -19,11 +19,8 @@ set -g pane-active-border-style fg=white
 # Theme: status
 set -g status-style bg=default,fg=black,bright
 set -g status-left ""
-set -g status-right "#[fg=black,bright]#H//#{b:pane_current_path}"
+set -g status-right "#[fg=black,bright]#H//#(basename #{pane_current_path})"
 set -g status-position top
-# rename panes to current working directory
-set-option -g automatic-rename on
-#set-option -g automatic-rename-format '#{b:pane_current_path}'
 
 # Theme: command line
 set-option -g message-command-style bg=default,fg=black,bright
