--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -13,18 +13,19 @@ set -g pane-base-index 1
 
 # Theme: borders
 set -g pane-border-lines simple
-set -g pane-border-style fg=black,bright
-set -g pane-active-border-style fg=white
+set -g pane-border-style fg=colour241
+set -g pane-active-border-style fg=colour241
 
 # Theme: status
-set -g status-style bg=default,fg=black,bright
+set -g status-style bg=default,fg=colour241
 set -g status-left ""
-set -g status-right "#[fg=black,bright]#H//#(basename #{pane_current_path})"
+set -g status-right "#[fg=colour241]#H//#(basename #{pane_current_path})"
 set -g status-position top
 
 # Theme: command line
-set-option -g message-command-style bg=default,fg=black,bright
-set-option -g message-style bg=default,fg=black,bright
+set-option -g message-command-style bg=default,fg=colour241
+set-option -g message-style bg=default,fg=colour241
 
 # Theme: session select
-set -wg mode-style bg=default,fg=black,bright
+set -wg mode-style bg=default,fg=colour241
+
