--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -18,9 +18,10 @@ set -g pane-active-border-style fg=colour241
 
 # Theme: status
 set -g status-style bg=default,fg=colour241
-set -g status-left ""
-set -g status-right "#[fg=colour241]#H//#(basename #{pane_current_path})"
+set -g status-left "S:#S"
+set -g status-right "#[fg=colour241]#H"
 set -g status-position top
+set -g status-justify absolute-centre
 
 # Theme: command line
 set-option -g message-command-style bg=default,fg=colour241
