--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -11,10 +11,6 @@ set-option -g history-limit 10000
 set -g base-index 1
 set -g pane-base-index 1
 
-# Options: show current working directory in pane
-#set-option -g automatic-rename on
-#set-option -g automatic-rename-format '#{b:pane_current_path}'
-
 # Theme: borders
 set -g pane-border-lines simple
 set -g pane-border-style fg=colour241
@@ -22,7 +18,7 @@ set -g pane-active-border-style fg=colour241
 
 # Theme: status
 set -g status-style bg=default,fg=colour241
-set -g status-left "  #{b:pane_current_path}"
+set -g status-left " #{pane_current_path} #{b:pane_current_path}"
 set -g status-right "#[fg=colour241]#H"
 set -g status-position top
 set -g status-justify absolute-centre
