--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -18,7 +18,7 @@ set -g pane-active-border-style fg=colour241
 
 # Theme: status
 set -g status-style bg=default,fg=colour241
-set -g status-right "#[fg=colour241]#S"
+set -g status-right "#[fg=colour241]#H"
 set -g status-position top
 set -g status-justify absolute-centre
 
